# ModelLibrary

./: .gitignore  MLP.py  README.md  setup.cfg
benchmarks/FunctionLearning/: ConditionalGaussian.py  ConditionalGaussian_deepset.py  MultivariateGaussian_deepset.py
code/common/: Unet.py
code/diffusion/: ddpm.py  mnist.py  sde_score.py
jax/common/: PositionalEmbedding.py  Transformer.py  VisionTransformer.py
jax/diffusion/: mnist.py  mnist_distributed.py  sde.py  sde_score.py  sde_score_trainer.py
jax/distributed/: check_slurm.py  distributed_dataloader.py  submit_jax.sh
jax/flax/example/: MADE.py  MLP.py
jax/flax/model/: maf.py
jax/haiku/models/: mlp.py
models/: DeepSets.py  flows.py
pytorch/models/: DeepSets.py
src/kazeML/jax/bluejay_llm/: Readme.md  pyproject.toml  trainer.py  training_script.py
src/kazeML/jax/bluejay_llm/bluejay_llm/: bluejay.py  dataloader.py  test_block_fsdp.py  test_shard_model.py  trainer.py
src/kazeML/jax/bluejay_llm/src/bluejay_llm/: bluejay.py  dataloader.py
src/kazeML/jax/common/: Transformer.py  Unet.py  VisionTransformer.py
src/kazeML/jax/common/modules/: ConvFeatureExtraction.py  EMA.py  Embedding.py  PatchEmbed.py  Resnet.py  Updown_sampling.py  updown_sampling.py
src/kazeML/jax/data2vec/: data2vec.py  data2vec_dataset.py  data2vec_trainer.py  data2vec_vision.py  feature_extractor.py  mnist_pretrain.py  train_script.py
src/kazeML/jax/diffusion/: diffusion_dataset.py  mnist.py  mnist_distributed.py  sde.py  sde_score.py  sde_score_generate.py  sde_score_trainer.py  training_script.py
src/kazeML/jax/distributed/: check_slurm.py  distributed_dataloader.py  fsdp_shmap_example.py
src/kazeML/jax/flowmatching/: Intro.ipynb
src/kazeML/pytorch/benchmarks/FunctionLearning/: ConditionalGaussian_deepset.py  MultivariateGaussian.py
src/kazeML/pytorch/models/: SIREN.py
