[metadata]
name = kazeML
version = 0.0.1
author = Kaze Wong
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/kazeML
description = Kaze Wong machine learning library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = GPL-3.0

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax>=0.4.12
    jaxlib>=0.4.12
    equinox>=0.10.6
    optax>=0.1.5
    tqdm

    
python_requires =  >=3.9

[options.packages.find]
where=src