[project]
name = "bluejay_llm"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Kaze Wong", email = "kazewong.physics@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["black", "jax[cuda12]", "ipython", "numpy", "scipy", "torch"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
bluejay_llm = { path = ".", editable = true }

[tool.pixi.tasks]
