[project]
name = "bluejay_llm"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Kaze Wong", email = "kazewong.physics@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["black", "ipython", "scipy", "torch"]

[tool.pixi.system-requirements]
linux = "4.18.0"
cuda = "12.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
bluejay_llm = { path = ".", editable = true }
jax = { version = "*", extras = ["cuda12"]}

[tool.pixi.tasks]

[tool.pixi.dependencies]
fire = ">=0.6.0,<0.7"
equinox = ">=0.11.4,<0.12"
numpy = ">=1.0,<2.0"
tiktoken = ">=0.7.0,<0.8"
